--- a/7-26042022/css/styles.css
+++ b/7-26042022/css/styles.css
@@ -26,7 +26,7 @@ h1 {
 }
 #produto div a {
   margin-left: 20px;
-  text-align: left;
+  text-align: center;
   font-family: Georgia;
   font-size: 15pt;
   color: rgb(131, 194, 176);
