--- a/7-26042022/css/styles.css
+++ b/7-26042022/css/styles.css
@@ -2,6 +2,7 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  background-color: pink;
 }
 h1 {
   font-family: Georgia;
@@ -16,6 +17,7 @@ h1 {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  background-color: rgb(255, 223, 229);
 }
 #produto div {
   width: 18%;
@@ -23,6 +25,16 @@ h1 {
   border-radius: 20px;
   border: 1px solid white;
   box-shadow: 0px 0px 10px silver;
+  background-color: rgb(255, 223, 229);
+}
+#produto div a center {
+  margin-left: 20px;
+  text-align: center;
+  font-family: Georgia;
+  font-size: 15pt;
+  color: rgb(131, 194, 176);
+  text-decoration: none;
+  background-color: rgb(255, 223, 229);
 }
 #produto div a {
   margin-left: 20px;
@@ -31,6 +43,7 @@ h1 {
   font-size: 15pt;
   color: rgb(131, 194, 176);
   text-decoration: none;
+  background-color: rgb(255, 223, 229);
 }
 #produto div img {
   width: 90%;
@@ -48,10 +61,12 @@ h1 {
   text-align: left;
   font-family: Georgia;
   color: gray;
+  background-color: rgb(255, 223, 229);
 }
 .preco {
   margin: 10px;
   color: rgb(131, 194, 176);
+  background-color: rgb(255, 223, 229);
   font-family: Georgia;
   font-size: 15pt;
   text-align: left;
